Token check working for questions